{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 12,
  "lineage": "4d2780f9-9df5-6dda-16d3-17b1a09b75c8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_a_to_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-074efe2cd1fdd2df63322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-074efe2cd1fdd2df6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-028024dd57b518180"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "556899122067",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-074efe2cd1fdd2df6"
          },
          "dependencies": [
            "aws_route_table.rt_a",
            "aws_vpc.vpc_a",
            "aws_vpc.vpc_b",
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_b_to_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ab7784713e35e183179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-0ab7784713e35e183",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-028024dd57b518180"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "556899122067",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-0ab7784713e35e183"
          },
          "dependencies": [
            "aws_route_table.rt_b",
            "aws_vpc.vpc_a",
            "aws_vpc.vpc_b",
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:556899122067:route-table/rtb-074efe2cd1fdd2df6",
            "id": "rtb-074efe2cd1fdd2df6",
            "owner_id": "556899122067",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "RT-A"
            },
            "tags_all": {
              "Name": "RT-A"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8e3b1881e2689fb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "556899122067",
            "id": "rtb-074efe2cd1fdd2df6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:556899122067:route-table/rtb-0ab7784713e35e183",
            "id": "rtb-0ab7784713e35e183",
            "owner_id": "556899122067",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "RT-B"
            },
            "tags_all": {
              "Name": "RT-B"
            },
            "timeouts": null,
            "vpc_id": "vpc-030915f69647a17fa"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "556899122067",
            "id": "rtb-0ab7784713e35e183",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0183200f7253873cf",
            "region": "ap-south-1",
            "route_table_id": "rtb-074efe2cd1fdd2df6",
            "subnet_id": "subnet-086bb2315c6c56de5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.rt_a",
            "aws_subnet.subnet_a",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086bcf4563ba69285",
            "region": "ap-south-1",
            "route_table_id": "rtb-0ab7784713e35e183",
            "subnet_id": "subnet-09665dddd90fe0a31"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.rt_b",
            "aws_subnet.subnet_b",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:556899122067:subnet/subnet-086bb2315c6c56de5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086bb2315c6c56de5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "556899122067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Subnet-A"
            },
            "tags_all": {
              "Name": "Subnet-A"
            },
            "vpc_id": "vpc-0b8e3b1881e2689fb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "556899122067",
            "id": "subnet-086bb2315c6c56de5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:556899122067:subnet/subnet-09665dddd90fe0a31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09665dddd90fe0a31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "556899122067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Subnet-B"
            },
            "tags_all": {
              "Name": "Subnet-B"
            },
            "vpc_id": "vpc-030915f69647a17fa"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "556899122067",
            "id": "subnet-09665dddd90fe0a31",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:556899122067:vpc/vpc-0b8e3b1881e2689fb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0128149a944ee6aa9",
            "default_route_table_id": "rtb-0bef3e049b616ff0e",
            "default_security_group_id": "sg-03c70d721d97df39d",
            "dhcp_options_id": "dopt-05ff1659e5b3d810b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b8e3b1881e2689fb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bef3e049b616ff0e",
            "owner_id": "556899122067",
            "region": "ap-south-1",
            "tags": {
              "Name": "VPC-A"
            },
            "tags_all": {
              "Name": "VPC-A"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "556899122067",
            "id": "vpc-0b8e3b1881e2689fb",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:556899122067:vpc/vpc-030915f69647a17fa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0c188e12c10b03081",
            "default_route_table_id": "rtb-081d25137436d4604",
            "default_security_group_id": "sg-06b93dddc4035cde4",
            "dhcp_options_id": "dopt-05ff1659e5b3d810b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-030915f69647a17fa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-081d25137436d4604",
            "owner_id": "556899122067",
            "region": "ap-south-1",
            "tags": {
              "Name": "VPC-B"
            },
            "tags_all": {
              "Name": "VPC-B"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "556899122067",
            "id": "vpc-030915f69647a17fa",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-028024dd57b518180",
            "peer_owner_id": "556899122067",
            "peer_region": "ap-south-1",
            "peer_vpc_id": "vpc-030915f69647a17fa",
            "region": "ap-south-1",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "VPC-A-to-VPC-B"
            },
            "tags_all": {
              "Name": "VPC-A-to-VPC-B"
            },
            "vpc_id": "vpc-0b8e3b1881e2689fb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_a",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    }
  ]
}